# Patterns

./: Patterns.sln
1.1/: 1.1.cpp  1.1.vcxproj  1.1.vcxproj.filters  SqlSelectQuery.cpp  SqlSelectQuery.h
1.2/: 1.2.cpp  1.2.vcxproj  1.2.vcxproj.filters  CMakeList.txt  SqlSelectQuery.cpp
1.2/include/: SqlSelectQuery.h
2.1/: 2.1.cpp  2.1.vcxproj  CMakeList.txt
2.2/: 2.2.cpp  2.2.vcxproj
3,1/: 3,1.cpp  3,1.vcxproj  3,1.vcxproj.filters  CMakeLists.txt  logсommand.hpp
3.2/: 3.2.vcxproj  3.2.vcxproj.filters  CMakeLists.txt  observed.cpp  observer.cpp
3.2/include/: observed.hpp  observer.hpp
3.3/: 3.3.cpp  3.3.vcxproj  3.3.vcxproj.filters  CMakeLists.txt  logMessage.cpp
3.3/handlers/: CMakeLists.txt  abstractHandler.cpp  errorHandler.cpp  fatalErrorHandler.cpp  unknownMessageHandler.cpp  warningHandler.cpp
3.3/handlers/includes/: abstractHandler.hpp  errorHandler.hpp  fatalErrorHandler.hpp  handler.hpp  unknownMessageHandler.hpp  warningHandler.hpp
3.3/includes/: logMessage.hpp
3.3/type/: type.hpp
4.1/: нарушения  Solid.txt
4.2/: 4.2.cpp  4.2.vcxproj  CMakeLists.txt
